Fixed search box alignment

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -209,7 +209,7 @@
   height: 10vh;
   background-color: rgba(8, 8, 8, 0.8);
   backdrop-filter: blur(10px);
-  padding: 1.5rem;
+  padding: 0 1.5rem;
   transform: translateX(110%);
   transition: transform 0.4s ease;
   z-index: 1050;
@@ -217,6 +217,9 @@
   box-sizing: border-box;
   width: min(350px, 90vw);
   max-width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .search-wrapper .search-column.open {
@@ -224,6 +227,7 @@
 }
 
 .search-wrapper .search-form {
+  position: absolute;
   display: flex;
   align-items: center;
   justify-content: center;
